Blender crashing - bl_ui\space_filebrowser.py #90341

Closed
opened 2021-07-31 20:54:39 +02:00 by ManBlender · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.77

Blender Version
Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: 84da05a8b8
Worked: (newest version of Blender that worked as expected)

This same on 3.0 alpha

Short description of error

blender\2.93\scripts\startup\bl_ui\space_filebrowser.py", line 378, in poll
    context.space_data.params.use_library_browsing and
AttributeError: 'NoneType' object has no attribute 'use_library_browsing'

Exact steps for others to reproduce the error
I opening file Tux.Tux 0.4.blend
Then going to bookmark "Animation" and crash
https://blenderartists.org/t/tux-in-3d/467152/4

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.77 **Blender Version** Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: `84da05a8b8` Worked: (newest version of Blender that worked as expected) This same on 3.0 alpha **Short description of error** ``` blender\2.93\scripts\startup\bl_ui\space_filebrowser.py", line 378, in poll context.space_data.params.use_library_browsing and AttributeError: 'NoneType' object has no attribute 'use_library_browsing' ``` **Exact steps for others to reproduce the error** I opening file Tux.[Tux 0.4.blend](https://archive.blender.org/developer/F10251036/Tux_0.4.blend) Then going to bookmark "Animation" and crash https://blenderartists.org/t/tux-in-3d/467152/4
Author

Added subscriber: @ManBlender

Added subscriber: @ManBlender
Member

Added subscribers: @JulianEisel, @lichtwerk

Added subscribers: @JulianEisel, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, FileSelectParams is NULL for some reason
So UI is in borked state (workaround is to load this file with Load UI disabled)

1   __strlen_avx2                           strlen-avx2.S         74   0x7ffff7968c1d 
2   FileSelectParams_directory_length       rna_space_gen.c       2415 0x47d0d51      
3   RNA_property_string_length              rna_access.c          3426 0x462b130      
4   RNA_property_string_get_alloc           rna_access.c          3380 0x462af5b      
5   ui_but_string_get_ex                    interface.c           2787 0x4e22cdb      
6   ui_but_string_get                       interface.c           2882 0x4e23287      
7   ui_but_update_ex                        interface.c           3786 0x4e25fec      
8   ui_but_update                           interface.c           3853 0x4e262b5      
9   uiDefButR                               interface.c           5207 0x4e29303      
10  ED_file_path_button                     file_draw.c           90   0xdf447e0      
11  uiTemplateFileSelectPath                interface_templates.c 6471 0x4ea94eb      
12  UILayout_template_file_select_path_call rna_ui_gen.c          3744 0x47fc514      
13  RNA_function_call                       rna_access.c          7595 0x463504e      
14  pyrna_func_call                         bpy_rna.c             6459 0x488436a      
15  _PyObject_MakeTpCall                    call.c                191  0xec1c650      
16  _PyObject_VectorcallTstate              abstract.h            116  0x371b730      
17  _PyObject_VectorcallTstate              abstract.h            103  0x371b730      
18  PyObject_Vectorcall                     abstract.h            127  0x371b730      
19  call_function                           ceval.c               5072 0x371b730      

Maybe @JulianEisel knows right away?

Can confirm, FileSelectParams is NULL for some reason So UI is in borked state (workaround is to load this file with `Load UI` disabled) ``` 1 __strlen_avx2 strlen-avx2.S 74 0x7ffff7968c1d 2 FileSelectParams_directory_length rna_space_gen.c 2415 0x47d0d51 3 RNA_property_string_length rna_access.c 3426 0x462b130 4 RNA_property_string_get_alloc rna_access.c 3380 0x462af5b 5 ui_but_string_get_ex interface.c 2787 0x4e22cdb 6 ui_but_string_get interface.c 2882 0x4e23287 7 ui_but_update_ex interface.c 3786 0x4e25fec 8 ui_but_update interface.c 3853 0x4e262b5 9 uiDefButR interface.c 5207 0x4e29303 10 ED_file_path_button file_draw.c 90 0xdf447e0 11 uiTemplateFileSelectPath interface_templates.c 6471 0x4ea94eb 12 UILayout_template_file_select_path_call rna_ui_gen.c 3744 0x47fc514 13 RNA_function_call rna_access.c 7595 0x463504e 14 pyrna_func_call bpy_rna.c 6459 0x488436a 15 _PyObject_MakeTpCall call.c 191 0xec1c650 16 _PyObject_VectorcallTstate abstract.h 116 0x371b730 17 _PyObject_VectorcallTstate abstract.h 103 0x371b730 18 PyObject_Vectorcall abstract.h 127 0x371b730 19 call_function ceval.c 5072 0x371b730 ``` Maybe @JulianEisel knows right away?

This issue was referenced by c0900a64ce

This issue was referenced by c0900a64ceeaa46a1dfd1fa19d5b57449fb7788a
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2021-08-03 12:27:09 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90341
No description provided.